# tech_scan

./: .gitignore  AGENTS.md  Makefile  pyproject.toml  wapp_improve_plan.md
tech_scan/: __init__.py  cache.py  cli.py  cli_config.py  diagnostics.py  fetch.py  fetch_pipeline.py  html_extract.py  models.py  normalize.py  observations.py  output.py  providers.py  sanity.py  scanner.py  scheduler.py  url_policy.py
tech_scan/fetchers/: __init__.py  adblock.py  auto.py  browser.py  browser_capture.py  headers.py  requests.py  resources.py
tech_scan/fetchers/data/: __init__.py
tech_scan/fetchers/data/adblock/: LICENSE.html  NOTICE.md  __init__.py
tech_scan/fetchers/data/ubol/: NOTICE.md  __init__.py
tech_scan/providers/: __init__.py  base.py  builtin.py  factory.py  merge.py  regex_compile.py  signals.py  wappalyzer_engine.py  wappalyzer_json.py  wappalyzergo.py
tech_scan/providers/builtin_rules/: __init__.py  backend.py  cms.py  common.py  frontend.py  implied.py  server.py
tech_scan/providers/data/: __init__.py
tech_scan/providers/data/wappalyzergo/: NOTICE.md  __init__.py
tests/: live_website_references.json  test_cache.py  test_cli_cache.py  test_fetch.py  test_fetch_pipeline.py  test_models.py  test_normalize.py  test_output.py  test_providers.py  test_sanity.py
