[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-scan"
version = "0.1.0"
description = "Bug bounty oriented website technology detector"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "requests>=2.31",
]

[project.scripts]
tech-scan = "tech_scan.cli:main"
